few minor fixes